--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.6.2"
+    "@astrojs/mdx": "^4.2.5",
+    "astro": "^5.7.5"
   }
 }
